5.0.0
- Added immediately browser output to the output choices.
- Added default value analysis to the additional info.
- Added German localisation.
- Added serialized string pretty print.
- Added static cache to the filepath scalar analysis.
- Added support for the hidden properties of ext_dom classes.
- Added typed property analysis.
- Change: Removed deprecated code.
- Change: Drop PHP 7.0 support
- Change: Streamlined the type display of strings
- Change: Defined visibility for all constants.
- Change: Added missing PHP 7.1 return type to methods.
- Change: Moved the ViewConstInterface to the translations.
- Change: Moved the local declaration retrieval methods into
  their own API.
- Change: Reworked some help texts.
- Change: Input elements are now allowed to not have any eval
  callback.
- Change: Remove the inherited constants from the kreXX
  main class.
- Change: String and array analysis now cache their settings.
- Change: The ScalarString class gets instantiated only once
  per run.
- Change: Removed the scope analysis setting.
- Change: Lots of deprecations.
- Change: Removed the XML decoder.
- Change: Moved the return type retrieval by reflection to the
  more appropriate AbstractDeclaration class.
- Change: Moved the parameter analysis to the declaration
  analysis classes.
- Change: Empty configuration sections are not rendered anymore.
- Change: Always allow a none rendering of configuration settings.
- Change: Streamlined the return type of the
  retrieveDeclaringReflection of class methods.

4.1.5
- Bugfix: Unnecessary uri encoding in the smoky grey skin prevents
  the display of certain additional info values.
- Bugfix: Prevent an overfow in the additional info of the smoky
  grey skin.

4.1.4
- Added support for readonly properties
- Bugfix: Correctly identify uninitialized properties.
- Bugfix: Prevent unnecessary filesystem calls in the filepath
  analysis.

4.1.3
- Added microtime analysis to the float routing.